endpoint para comparar ofertas, mejoras generales y bases para scraper inteligente